# Frick

./: CMakeLists.txt  README.md
src/: main.cpp
src/function/: bootsplash.cpp
src/headers/: extern.hpp
